--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -18,12 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "proxy":"localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
