--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"localhost:3001",
+  "proxy":"http://localhost:3001",
   
   "browserslist": {
     "production": [
