--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production npm run index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "4.17.2",
     "lodash": "^4.17.21",
@@ -21,9 +22,7 @@
     "eslint": "^8.8.0",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.0",
-    "nodemon": "2.0.15"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "nodemon": "2.0.15",
+    "supertest": "^6.2.2"
   }
 }
