--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production npm run index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --watch"
+    "test": "cross-env PORT=1234 NODE_ENV=test jest --verbose --watch tests/users_api.test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "6.2.0"
+    "mongoose": "^5.9.7",
+    "mongoose-unique-validator": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
