--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production npm run index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env PORT=1234 NODE_ENV=test jest --verbose --watch tests/users_api.test.js"
+    "test": "cross-env PORT=1234 NODE_ENV=test jest --verbose --watch "
   },
   "author": "",
   "license": "ISC",
