--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production npm run index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env PORT=1234 NODE_ENV=test jest --verbose --watch "
+    "test": "cross-env PORT=1234 NODE_ENV=test jest --verbose --watch ",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "",
   "license": "ISC",
