--- a/part7/bloglist-app/package.json
+++ b/part7/bloglist-app/package.json
@@ -44,10 +44,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "autoprefixer": "^10.4.2",
     "cypress": "^9.5.0",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-react": "^7.28.0"
+    "eslint-plugin-react": "^7.28.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^2.2.19"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": ".eslintrc.js",
